--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "code-quest",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,22 +13,21 @@
   "dependencies": {
     "@babel/standalone": "^7.29.1",
     "@monaco-editor/react": "^4.7.0",
-    "@tailwindcss/vite": "^4.1.14",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@tailwindcss/vite": "^4.2.1",
+    "@vitejs/plugin-react": "^5.1.4",
     "js-interpreter": "^6.0.1",
     "lucide-react": "^0.546.0",
-    "motion": "^12.23.24",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "motion": "^12.34.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.2.1",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
-    "vite": "^6.4.1",
-    "vite-plugin-monaco-editor": "^1.1.0"
+    "vite": "^6.4.1"
   }
 }
